[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pyspectools"
description = "A set of Python tools/routines for spectroscopy"
homepage = "https://github.com/laserkelvin/PySpecTools"
repository = "https://github.com/laserkelvin/PySpecTools"
documentation = "https://laserkelvin.github.com/PySpecTools"
readme = "README.md"
authors = [
  {"name" = "Kelvin Lee", "email" = "kin.long.kelvin.lee@gmail.com"}
]
version = "5.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.16",
  "scipy>=1.7.1",
  "matplotlib>=3.4.3",
  "astroquery@git+https://github.com/astropy/astroquery",
  "astropy>=4.3.1",
  "lmfit>=1.0.2",
  "PeakUtils>=1.3.2",
  "scikit-learn>=1.0.0",
  "colorlover>=0.3.0",
  "monsterurl>=0.2",
  "plotly>=3.0.0",
  "periodictable>=1.6.0",
  "uncertainties>=3.1.6",
  "joblib",
  "ruamel.yaml>=0.17.16",
  "paramiko>=2.7.2",
  "Jinja2>=3.0.1",
  "tqdm",
  "tinydb>=4.5.2",
  "networkx>=2.6.3",
  "numba",
  "ipython",
  "ipywidgets",
  "bokeh"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff"
]

[tool.hatch.metadata]
allow-direct-references = true
